# obsidian-get-tags

./: Cargo.toml
src/: main.rs
